--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "history": "^4.10.1",
     "immer": "^6.0.2",
-    "polished": "^3.5.0",
+    "polished": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
