--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "customize-cra": "^0.9.1",
+    "date-fns": "^2.12.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "history": "^4.10.1",
     "immer": "^6.0.2",
@@ -16,8 +17,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
