--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.8",
+    "react-navigation-tabs": "^2.8.12",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
