--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.3.3",
+    "@react-navigation/native": "^5.2.3",
+    "@react-navigation/stack": "^5.2.18",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
     "immer": "^6.0.3",
@@ -23,7 +26,6 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.8",
     "react-navigation-tabs": "^2.8.12",
     "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
