--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
     "axios": "^0.19.2",
     "date-fns": "^2.12.0",
     "immer": "^6.0.3",
